refactor: Adjust the repository, services and controller according to the model and DTO.